apps/base/messaging/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: emqx.peterduckett.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx
                port:
                  number: 18083
  tls:
    - hosts:
        - emqx.peterduckett.me
      secretName: emqx-dashboard-tls
